[tool.poetry]
name = "dc-forwards"
version = "0.1.0"
description = ""
authors = ["sasha-viribus <sasha@viribusfund.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
jupyterlab = "^4.2.5"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
datetime = "^5.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
